<resources>
    <string name="theme">Theme</string>
    <string name="default_theme">Brown Lime</string>
    <string-array name="themes_list">
        <item>Purple Lime</item>
        <item>Purple Amber</item>
        <item>Brown Lime</item>
        <item>Brown Amber</item>
        <item>Grey Purple</item>
        <item>Deep Purple Amber</item>
        <item>Night (OLED)</item>
        <item>Night</item>
    </string-array>

    <string-array name="themes_list_values">
        <item>PL</item>
        <item>PA</item>
        <item>BL</item>
        <item>BA</item>
        <item>GP</item>
        <item>DPA</item>
        <item>NO</item>
        <item>N</item>
    </string-array>

    <string name="app_name">Aji</string>
    <string name="unknown">&lt;unknown&gt;</string>
    <plurals name="song_count">
        <item quantity="one">%1$d Song</item>
        <item quantity="other">%1$d Songs</item>
    </plurals>
    <string name="delete">Delete</string>
    <string name="play">Play</string>
    <string name="queue">Queue</string>
    <string name="edit">Edit</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="new_playlist">New Playlist</string>

    <string name="order_by_title">Order by title</string>
    <string name="order_by_album">Order by album</string>
    <string name="order_by_artist">Order by artist</string>
    <string name="direction">Direction</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="contentDescription_sort_options">Sort Options</string>
    <string name="contentDescription_toggle_favorite">toggle favorite</string>
    <string name="contentDescription_change_sort_order">Change sort order</string>
    <string name="menu_dots">⋮</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="hint_playlist_name">Playlist Name</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="playlist_name_empty">Name cannot be empty</string>

    <string name="hint_name">Name</string>
    <string name="contentDescription_drag_to_reorder_songs_in_playlist">Drag to Reorder songs in playlist</string>
    <string name="song_removed_playlist">Song removed from Playlist</string>
    <string name="undo">Undo</string>
    <string name="contentDescription_play_playlist">Play Playlist</string>
    <string name="playlist_deleted">Playlist Deleted</string>
    <string name="contentDescription_edit_playlist">edit playlist</string>
    <string name="contentDescription_edit_radiostation">edit radio</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_subtitle">Music Your Way</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_library">Library</string>
    <string name="menu_playlists">Playlists</string>
    <string name="menu_radiostations">Radio Stations</string>
    <string name="menu_filters">Filters</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_media_store_title">Sync with MediaStore</string>
    <string name="menu_playlist_details">Playlist Details</string>
    <string name="search">Search</string>
    <string name="contentDescription_play_radiostation">Play Radio</string>
    <string name="hint_url">Url</string>
    <string name="menu_radiostation_details">Radiostation Details</string>
    <string name="radiostation_import_info">You can also import a PLS file</string>
    <string name="genres">Genres</string>
    <string name="select_pls_file">Select PLS File</string>
    <string name="genre_hint">Genre</string>
    <string name="import_from_pls_file">Import from PLS File</string>

    <string name="contentDescription_playbackmode_repeat">Change Repeat Mode</string>
    <string name="contentDescription_playbackmode_shuffle">Toggle shuffle</string>
    <string name="contentDescription_playbackmode_autoqueue">Automatically play next song</string>
    <string name="menu_song_details">Song Details</string>
    <string name="delete_song">Hide in Library</string>
    <string name="tab_artists">Artists</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_songs">Songs</string>
    <string name="menu_album_details">Album Details</string>
    <string name="menu_artist_details">Artist Details</string>
    <string name="unknown_duration">---</string>
    <string name="not_playing">Not Playing</string>
    <string name="contentDescription_album_art">Album Art</string>
    <string name="song_removed_from_library">Song has been hidden</string>
    <string name="song_queued">Song %s has been added to the queue</string>
    <string name="now_playing">Now Playing</string>
    <string name="details">Details</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="contentDescription_delete_playlist">Delete Playlist</string>
    <string name="contentDescription_delete_radiostation">Delete Radiostation</string>
    <string name="delete_radiostation">Delete Radiostation</string>
    <string name="radiostation_deleted">Radiostation deleted</string>
    <string name="remove_from_queue">Remove from Queue</string>
    <string name="radiostation_url_invalid">The given url does not seem to be a working radio</string>
    <string name="radiostation_url_invalid_title">Radio Not Working</string>
    <string name="ignore">Ignore</string>
    <string name="fix">Edit Url</string>
    <string name="playback_error_song_title">Error playing Song</string>
    <string name="playback_error_song_text">An error has occurred while playing %1s by %2s.</string>
    <string name="go_to_songdetails">Song Details</string>
    <string name="playback_error_radio_text">Error while playing station %s</string>
    <string name="plaback_error_radio_title">Error playing Radio</string>
    <string name="go_to_radiodetails">Radiostation details</string>
    <string name="menu_about">About</string>
    <string name="about_app">Music your way.\n\nAji is a customizable audio player for android devices.</string>
    <string name="licenses">Licenses</string>
    <string name="about">About</string>
    <string name="version">"Version: "</string>
    <string name="contentDescription_app_icon">App Icon</string>
    <string name="menu_licenses">Licenses</string>
    <string name="menu_license_details">License Details</string>
    <string name="playlist_exists">Playlist with name \'%s\' already exists.</string>
    <string name="hide_artist_from_library">Hide in Library</string>
    <string name="show_hidden">Show hidden</string>
    <string name="hide_hidden">Hide hidden</string>
    <string name="show_in_library">Show in Library</string>
    <string name="menu_directory_selection">Select File or Folder</string>
    <string name="menu_select_file">Select File</string>
    <string name="scanning_directory">Directory \'%s\' will be scanned for audio files</string>
    <string name="add_file">File \'%s\' will be added to library</string>
    <string name="playlist_created">Playlist \'%s\' has been created</string>
    <string name="song_added_to_playlist">Song \'%1s\' has been added to Playlist \'%2s\'</string>
    <plurals name="directories">
        <item quantity="one">%1$d Directory</item>
        <item quantity="other">%1$d Directories</item>
    </plurals>
    <plurals name="audio_files">
        <item quantity="one">%1$d Audio File</item>
        <item quantity="other">%1$d Audio Files</item>
    </plurals>
    <plurals name="files">
        <item quantity="one">%1$d File</item>
        <item quantity="other">%1$d Files</item>
    </plurals>
    <string name="unknown_files">\? Audio Files</string>
    <string name="remove_all_songs">Remove all Songs and Playlists</string>
    <string name="remove_all_songs_and_playlists">Are you sure you want to remove all songs and playlists?</string>
    <string name="artist_removed_from_library">Artist \'%s\' has been hidden</string>
    <string name="album_removed_from_library">Album \'%s\' has been hidden</string>
    <string name="unhide_artist_from_library">Show artist in Library</string>
    <string name="unhide_album_from_library">Show album in Library</string>

    <string name="empty_playlists_prompt">No playlists available. Start by tapping the plus button to create your first playlist and then add some songs in the library</string>
    <string name="empty_playlist_prompt">Start by some songs to your playlists in the library</string>
    <string name="no_songs_prompt">Start by adding some songs to your device</string>
    <string name="no_favorites_prompt">Start by adding some songs to your favorites</string>
    <string name="no_radios_prompt">Start by adding a radio station</string>
    <string name="search_no_result">Your search did not return any result</string>
    <string name="no_filters">No filters available</string>
    <string name="no_hidden">No hidden songs available. Show all songs in the menu</string>
    <string name="filter_echo">Echo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter_delay">Delay</string>
    <string name="menu_echo_filter_details">Echo Filter</string>
    <string name="filter_enabled">Enabled</string>
    <string name="filter_strength">Echo Strength</string>
    <string name="filter_slider_seconds">%.2fs</string>
    <string name="filter_slider_percent">%d%%</string>
</resources>
