<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        app:key="radiostation_default_import"
        app:isPreferenceVisible="false"
        app:defaultValue="false"
        app:title="" />

    <SwitchPreferenceCompat
        app:key="mediastore_sync"
        app:defaultValue="true"
        app:title="@string/settings_media_store_title" />

    <ListPreference
        app:key="theme"
        app:defaultValue="@string/default_theme"
        app:title="@string/theme"
        app:entries="@array/themes_list"
        app:entryValues="@array/themes_list_values"/>

    <Preference
        app:key="remove_all_songs"
        android:title="@string/remove_all_songs" />

    <Preference
        app:key="about"
        android:title="@string/about" />

    <Preference
        app:key="licenses"
        android:title="@string/licenses" />

</PreferenceScreen>
