<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/song_menu_play"
        android:icon="@drawable/ic_play"
        android:title="@string/play" />
    <item
        android:id="@+id/song_menu_queue"
        android:icon="@drawable/ic_queue"
        android:title="@string/queue" />
    <item
        android:id="@+id/song_menu_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit" />

    <item android:id="@+id/song_menu_add_to_playlist"
        android:icon="@drawable/ic_playlist_add"
        android:title="@string/add_to_playlist">
        <menu >
            <item
                android:id="@+id/song_create_playlist"
                android:icon="@drawable/ic_add"
                android:title="@string/new_playlist" />
        </menu>
    </item>

    <item
        android:id="@+id/song_menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete" />
</menu>