<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_menu_library"
            android:title="@string/menu_library" />

        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_menu_playlist"
            android:title="@string/menu_playlists" />

        <item
            android:id="@+id/nav_radiostations"
            android:icon="@drawable/ic_menu_radiostation"
            android:title="@string/menu_radiostations" />

        <item
            android:id="@+id/nav_filters"
            android:icon="@drawable/ic_menu_filter"
            android:title="@string/menu_filters" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>
