<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_library">

    <fragment
        android:id="@+id/nav_library"
        android:name="ch.zhaw.engineering.tbdappname.ui.library.LibraryFragment"
        android:label="@string/menu_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/nav_playlists"
        android:name="ch.zhaw.engineering.tbdappname.ui.playlist.PlaylistListFragment"
        android:label="@string/menu_playlists"
        tools:layout="@layout/fragment_playlist" />

    <fragment
        android:id="@+id/nav_radiostations"
        android:name="ch.zhaw.engineering.tbdappname.ui.radiostation.RadioStationFragment"
        android:label="@string/menu_radiostations"
        tools:layout="@layout/fragment_radio_station">
    </fragment>

    <fragment
        android:id="@+id/nav_filters"
        android:name="ch.zhaw.engineering.tbdappname.ui.filter.FilterFragment"
        android:label="@string/menu_filters"
        tools:layout="@layout/fragment_filter" />
</navigation>