<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fragment_margin"
    android:orientation="vertical"
    tools:context=".ui.radiostation.RadioStationDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ch.zhaw.engineering.tbdappname.view.EditTextView
            android:id="@+id/radiostation_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_name" />

        <ch.zhaw.engineering.tbdappname.view.TbdImageButton
            android:id="@+id/radiostation_edit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/contentDescription_edit_radiostation"
            android:gravity="center"
            android:padding="0dp"
            android:src="@drawable/ic_edit" />
    </LinearLayout>


    <ch.zhaw.engineering.tbdappname.view.EditTextView
        android:id="@+id/radiostation_url"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/hint_url"
        android:inputType="textUri" />

</LinearLayout>