<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginBottom="10dp">

    <ch.zhaw.engineering.aji.view.ImageButton
        android:id="@+id/playbackmode_repeat"
        android:layout_width="@dimen/expanded_controls_button_size"
        android:layout_height="@dimen/expanded_controls_button_size"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/contentDescription_playbackmode_repeat"
        android:gravity="center"
        android:padding="0dp"
        android:src="@drawable/ic_repeat_off" />

    <ch.zhaw.engineering.aji.view.ImageButton
        android:id="@+id/playbackmode_shuffle"
        android:layout_width="@dimen/expanded_controls_button_size"
        android:layout_height="@dimen/expanded_controls_button_size"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/contentDescription_playbackmode_shuffle"
        android:gravity="center"
        android:padding="0dp"
        android:src="@drawable/ic_shuffle_off" />

    <ch.zhaw.engineering.aji.view.ImageButton
        android:id="@+id/playbackmode_autoqueue"
        android:layout_width="@dimen/expanded_controls_button_size"
        android:layout_height="@dimen/expanded_controls_button_size"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/contentDescription_playbackmode_autoqueue"
        android:gravity="center"
        android:padding="0dp"
        android:src="@drawable/ic_autoqueue_off" />
</LinearLayout>