<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="@dimen/details_margin"
    android:paddingTop="@dimen/fragment_margin"
    android:paddingEnd="@dimen/details_margin"
    tools:context=".ui.song.SongDetailsFragment">

    <ImageView
        android:id="@+id/album_cover"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/contentDescription_album_art"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/song_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fragment_margin"
                android:layout_marginBottom="4dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="?attr/primaryTextColor"
                tools:text="Fake Song 1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/song_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceListItemSecondary"
                    tools:text="Fake Artist" />

                <TextView
                    android:id="@+id/song_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textAppearance="?attr/textAppearanceListItemSecondary"
                    tools:text="Fake Album" />
            </LinearLayout>
        </LinearLayout>

        <ch.zhaw.engineering.aji.view.ImageButton
            android:id="@+id/song_item_favorite"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/contentDescription_toggle_favorite"
            android:gravity="center"
            android:padding="0dp"
            android:src="@drawable/ic_favorite" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ch.zhaw.engineering.aji.view.Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/song_details_button_height"
            app:drawableStartCompat="@drawable/ic_play"
            app:drawableTint="?attr/colorPrimary"
            android:drawablePadding="@dimen/button_with_image_padding"
            android:text="@string/play" />

        <ch.zhaw.engineering.aji.view.Button
            android:id="@+id/queue"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/song_details_button_height"
            app:drawableStartCompat="@drawable/ic_queue"
            app:drawableTint="?attr/colorPrimary"
            android:drawablePadding="@dimen/button_with_image_padding"
            android:text="@string/queue" />


        <ch.zhaw.engineering.aji.view.Button
            android:id="@+id/add_to_playlist"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/song_details_button_height"
            app:drawableStartCompat="@drawable/ic_playlist_add"
            app:drawableTint="?attr/colorPrimary"
            android:drawablePadding="@dimen/button_with_image_padding"
            android:text="@string/add_to_playlist" />

        <ch.zhaw.engineering.aji.view.Button
            android:id="@+id/delete_song"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/song_details_button_height"
            app:drawableStartCompat="@drawable/ic_hide"
            app:drawableTint="?attr/colorPrimary"
            android:drawablePadding="@dimen/button_with_image_padding"
            android:text="@string/delete_song" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>