<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="@dimen/fragment_margin"
    android:paddingTop="@dimen/list_item_margin"
    android:paddingEnd="@dimen/fragment_margin"
    android:paddingBottom="@dimen/list_item_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/album_cover"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_placeholder_image"
            android:layout_marginEnd="@dimen/button_with_image_padding"
            android:contentDescription="@string/contentDescription_album_art" />
        <TextView
            android:id="@+id/album_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/fragment_margin"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="?attr/primaryTextColor"
            android:gravity="center_vertical"
            tools:text="Pop Rock Radio" />

    </LinearLayout>

    <ch.zhaw.engineering.tbdappname.view.TbdImageButton
        android:id="@+id/album_item_play"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/contentDescription_play_radiostation"
        android:gravity="center"
        android:padding="0dp"
        android:src="@drawable/ic_play" />

    <ch.zhaw.engineering.tbdappname.view.TbdButton
        android:id="@+id/album_item_overflow"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/menu_dots"
        android:textAppearance="?android:textAppearanceLarge" />

</LinearLayout>